syntax = "proto3";
option java_multiple_files = true;
package sd.oficina.shared.proto;
import "google/protobuf/empty.proto";
import "messagesPerson1.proto";

service CidadeService {
    rpc salvar (Cidade) returns (CidadeResult);
    rpc atualizar (Cidade) returns (CidadeResult);
    rpc deletar (Cidade) returns (CidadeResult);
    rpc buscar (Cidade) returns (CidadeResult);
    rpc listar (google.protobuf.Empty) returns (CidadeList);
}

service EstadoService {
    rpc salvar (Estado) returns (EstadoResult);
    rpc atualizar (Estado) returns (EstadoResult);
    rpc deletar (Estado) returns (EstadoResult);
    rpc buscar (Estado) returns (EstadoResult);
    rpc listar (google.protobuf.Empty) returns (EstadoList);
}

service ClienteService {
    rpc salvar (Cliente) returns (ClienteResult);
    rpc atualizar (Cliente) returns (ClienteResult);
    rpc deletar (Cliente) returns (ClienteResult);
    rpc buscar (Cliente) returns (ClienteResult);
    rpc listar (google.protobuf.Empty) returns (ClienteList);
}

service FornecedorService {
    rpc salvar (Fornecedor) returns (FornecedorResult);
    rpc atualizar (Fornecedor) returns (FornecedorResult);
    rpc deletar (Fornecedor) returns (FornecedorResult);
    rpc buscar (Fornecedor) returns (FornecedorResult);
    rpc listar (google.protobuf.Empty) returns (FornecedorList);
}
